[gd_scene load_steps=13 format=2]

[ext_resource path="res://Dress.gd" type="Script" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameFish.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hat.tscn" type="PackedScene" id=4]
[ext_resource path="res://Monocle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Dots.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/fonts/slkscre.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://QuitMenu.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 7 )

[node name="Dress" type="Node"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="GameFish" parent="." instance=ExtResource( 3 )]
position = Vector2( 500, 250 )

[node name="Hat" parent="." instance=ExtResource( 4 )]

[node name="Monocle" parent="." instance=ExtResource( 5 )]

[node name="FishStartingPosition" type="Position2D" parent="."]
position = Vector2( 750, 250 )

[node name="ClothesPosition" type="Position2D" parent="."]
position = Vector2( 250, 250 )

[node name="Dots" parent="." instance=ExtResource( 6 )]
position = Vector2( 237, 160 )

[node name="WearButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = -150.0
margin_right = 114.0
margin_bottom = -150.0
rect_pivot_offset = Vector2( 30, 18.5 )
custom_fonts/font = SubResource( 1 )
text = "Wear"

[node name="UndoButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 270.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = -150.0
rect_pivot_offset = Vector2( 30, 18.5 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Undo"

[node name="CustomizeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -464.0
margin_top = 25.0
margin_right = 464.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Customize Appearance"
align = 1

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -41.0
margin_right = 93.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[node name="RightButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 350.0
margin_top = -15.5
margin_right = 30.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 4 )
text = ">"

[node name="LeftButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 130.0
margin_top = -15.5
margin_right = 30.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 4 )
text = "<"

[node name="QuitMenu" parent="." instance=ExtResource( 8 )]
[connection signal="pressed" from="WearButton" to="." method="_on_WearButton_pressed"]
[connection signal="pressed" from="UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="QuitMenu/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="QuitMenu/NoButton" to="." method="_on_NoButton_pressed"]

[editable path="QuitMenu"]
